@@ -2,7 +2,7 @@ Package: hoardeR
 Type: Package
 Title: hoardeR package
 Version: 0.2
-Date: 2014-08-013
+Date: 2014-10-06
 Author: Daniel Fischer
 Maintainer: Daniel Fischer <daniel.fischer@mtt.fi>
 Depends: R (>= 3.0.2), httr (>= 0.2), XML (>= 3.98-1.1), stringr (>= 0.6.2), MASS (>= 7.3-31), R.utils (>= 1.32.4)
