@@ -7,12 +7,12 @@
 }
 
 \description{
-  The hoardeR package is designed for collecting and retrieving data from
-  various sources. The current main focus is on setting up a connection to
+  The hoardeR package is designed for collecting, retrieving and transforming data
+  from various sources. The current main focus is on setting up a connection to
   the NCBI Blast service. Also, the gene information for Ensemble Genes can
   be retrieved from NCBI.
-  Methods for visualizing the results is currently under development. The
-  latest 'night-build' can be retrieved from
+  Methods for visualizing the results are currently under development. The latest
+  'night-build' of the package can be retrieved from
   
   https://github.com/fischuu/hoardeR
 }
@@ -22,7 +22,7 @@
     Package: \tab hoardeR\cr
     Type: \tab Package\cr
     Version: \tab 0.2\cr
-    Date: \tab 2014-08-13\cr
+    Date: \tab 2014-10-06\cr
     License: \tab GPL\cr
     LazyLoad: \tab yes\cr
   }
